...
    <string name="label_share">Open phone number</string>
    <string name="label_share_contact">Open contact</string>
    <string name="label_history">History</string>
    <string name="label_settings">Settings</string>
    <string name="label_history_view_all">View all</string>

    <string name="phone_number_selection_dialog_title">Multiple phone numbers detected</string>
    <string name="phone_number_selection_dialog_message">It looks like multiple phone numbers are available. Which number do you want to chat with?</string>

    <string name="button_choose_from_contacts">Choose from contacts</string>

    <string name="button_paste_from_clipboard_description">Paste from clipboard</string>
    <string name="button_paste_from_clipboard">Clipboard</string>
    <string name="label_contacts_shortcut">Contacts</string>
...
